# QtDice

./: .CMakeLists.txt.kate-swp  .gitignore  .travis.yml  CMakeLists.txt  QtDice.desktop  QtDice.kdev4  README.md
.kdev4/: QtDice.kdev4
headers/: about.h  configure.h  infotab.h  qtdice.h  qtdice.h.autosave
headers/include/: qtheaders.h
share/: dice.qrc
src/: .main.cpp.kate-swp  .qtdice.cpp.kate-swp  README.md  animate_dice.cpp  challenge.cpp  challenge.h  challenge.ui  dice.qrc  image_update.cpp  main.cpp  qtdice.cpp  qtdice.h  qtdice.ui  qtdice_.cpp  qtheaders.h  usermenu.cpp  usermenu.h  usermenu.ui  usermodel.cpp  usermodel.h  userwidget.cpp  userwidget.h  userwidget.ui  version.h  version.h.in  widget.ui
src/About/: CMakeLists.txt  about.cpp  about.h  about.ui  about_.cpp  infotab.cpp
src/Animation/: animation.cpp
src/Dice/: dice.cpp  dice.hpp
src/Settings/: CMakeLists.txt  configure.cpp  configure.h  configure.ui
src/headers/: .qtdice.h.kate-swp  about.h  animation.h  configure.h  infotab.h  qtdice.h  version.h
src/slots/: reload.cpp  set_widgets.cpp  stop_last_frame.cpp
